# Demo_Optimization

./: README.md
demo/: CMakeLists.txt  demo
demo/ExecutableFile/: 17M_match_noRegex_OpenMP  17M_match_regex  17M_match_regex_OpenMP  17M_match_regex_multiThread  17M_match_regex_nosimd  17M_match_regex_simd  17M_match_regex_simd_OpenMP  17M_match_regex_simd_multiThread  1G_match_noRegex_OpenMP  1G_match_regex  1G_match_regex_OpenMP  1G_match_regex_multiThread  1G_match_regex_nosimd  1G_match_regex_simd  1G_match_regex_simd_OpenMP  1G_match_regex_simd_multiThread
demo/dataset/: test.txt
demo/include/: Parser_noRegex.hpp  Parser_noRegex_fgets.hpp  Parser_regex.h  helpFunc.hpp  help_func.hpp  parser_multiThread.h  parser_regex.h  parser_regex.hpp  parser_regex_openmp.hpp
demo/src/: Parser_regex.cpp  main.cpp  parser_regex.cpp
demo/third_library/rejit/lib/librejit/: __.SYMDEF
